fix gap issues

--- a/src/app/legal/legal.module.css
+++ b/src/app/legal/legal.module.css
@@ -136,8 +136,14 @@
 }
 
 .flushList {
+  margin-left: 0;
   padding-left: 0;
   list-style: none;
+}
+
+.legalCard ul.flushList {
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .legalCard a {
